--- a/umlement/templates/umlement/index.html
+++ b/umlement/templates/umlement/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 
 <head>
@@ -10,10 +11,24 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
+    <link rel="stylesheet" type="text/css" href="{% static 'umlement/style.css' %}">
+
     <title>UMLement</title>
 </head>
 
 <body>
+    <div class="split left">
+        <div class="centered">
+            <p>left</p>
+        </div>
+    </div>
+
+    <div class="split right">
+        <div class="centered">
+            <p>right</p>
+        </div>
+    </div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
